# grace-m1

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  docs.yml
cmake/: FindKadath.cmake  code_modules.cmake  register_grace_object.cmake  register_test.cmake  setup_kokkos.cmake  setup_yaml.cmake
configs/: adm_integrals_test.yaml
doc/_templates/: layout.html
doc/citing/: index.rst
doc/code_building_guide/: index.rst
doc/design/: particles.md
doc/gallery/: index.rst
doc/introduction/: index.rst
doc/quickstart/: index.rst
doc/userguide/: index.rst
examples/cowling_grmhd/: kelvin_helmholtz.yaml
examples/cowling_grmhd/shocktubes/: balsara1.yaml  balsara1_cpu_tutorial.yaml  balsara2.yaml  non_magnetized.yaml
examples/grmhd/: A0_z4c_lowres.yaml  fuka_bns_r16_B14.yaml  fuka_bns_r25_B14.yaml  fuka_bns_r25_B15.yaml  fuka_bns_r50.yaml  fuka_bns_r50_B15.yaml  gallery_bns.yaml  profile_m1_lowres.yaml
include/grace/: grace_config.h.in
include/grace/IO/: adm_quantities.hh  cell_output.hh  geodesic_sphere_helpers.hh  hdf5_output.hh  hdf5_sphere_output.hh  hdf5_surface_output.hh  initial_data.hh  octree_search_class.hh  output_diagnostics.hh  scalar_output.hh  sphere_interpolator.hh  spherical_surface_helpers.hh  spherical_surfaces.hh  surface_IO_utils.hh  vtk_output.tpp  vtk_output_3D.tpp  vtk_output_auxiliaries.hh  vtk_setup_grid.hh  vtk_surface_output.hh  vtk_volume_output.hh  xmf_utilities.hh
include/grace/IO/diagnostics/: black_hole_diagnostics.hh  co_tracker.hh  diagnostic_base.hh  grmhd_diagnostics.hh  gw_integrals.hh  mag_energy.hh  outflow_diagnostics.hh
include/grace/amr/: amr_flags.hh  boundary_conditions.hh  connectivities_impl.hh  forest.hh  p4est_headers.hh  quadrant.hh  regrid.hh  tree.hh
include/grace/amr/ghostzone_kernels/: copy_kernels.hh  ghost_array.hh  index_helpers.hh  pack_unpack_kernels.hh  pack_unpack_task_factories.hh  phys_bc_kernels.hh  pr_ho_coeffs.hh  prolongation_kernels.hh  prolongation_task_factories.hh  restrict_kernels.hh  type_helpers.hh
include/grace/amr/regrid/: partition.hh  regrid_helpers.tpp
include/grace/coordinates/: cartesian_coordinate_systems.hh  coordinate_systems.hh  coordinate_utils.hh  coordinates.hh  rotation_matrices.hh  spherical_coordinate_jacobian_utils.hh  spherical_coordinate_systems.hh  spherical_device_inlines.hh
include/grace/data_structures/: grace_data_structures.hh  index_helpers.hh  memory_defaults.hh  variable_indices.hh  variable_properties.hh  variable_utils.hh  variables.hh
include/grace/errors/: abort.hh  assert.hh  error.hh
include/grace/evolution/: auxiliaries.hh  evolution_kernel_tags.hh  evolve.hh  fd_evolution_system.hh  find_stable_timestep.hh  hrsc_evolution_system.hh  initial_data.hh  refluxing.hh
include/grace/particles/: particle_advance.hh  particle_aux_fetch.hh  particle_aux_fetch.tpp  particle_distributor.hh  particle_owner_search.hh  particle_storage.hh  particle_utilities.hh  particles_module.hh
include/grace/physics/: bns_nurates.hh  bns_nurates_grace.hh  eas_kinds.hh  eas_neutrino_rates_analytic.hh  eas_optical_depth.hh  eas_policies.hh  grace_weakhub_table.hh  grmhd.hh  grmhd_B_from_A.hh  grmhd_helpers.hh  m1.hh  m1_helpers.hh  z4c.hh  z4c_helpers.hh
include/grace/physics/eos/: c2p.hh  ent_based_c2p.hh  (+16 more)
include/grace/profiling/: gpu_profiling.hh  profiling.hh  profiling_runtime.hh
include/grace/system/: checkpoint_handler.hh  grace_finalize.hh  grace_initialize.hh  grace_runtime.hh  grace_system.hh  kokkos_runtime.hh  mpi_runtime.hh  p4est_runtime.hh  print.hh  runtime_functions.hh
include/grace/utils/: LU_utils.hh  affine_transformation.hh  allocators.hh  bits.hh  bitset.hh  constexpr.hh  creation_policies.hh  device.h  device_event.hh  device_stream.hh  device_stream_pool.hh  execution_tag.hh  grid_interpolator.hh  gridloop.hh  integration.hh  iterator.hh  longevity_policies.hh  make_string.hh  math.hh  matrix_helpers.tpp  metric_utils.hh  mg.hh  particle_utilities.hh  reconstruction.hh  reductions.hh  riemann_solvers.hh  rootfinding.hh  runge_kutta.hh  string_manip.hh  tstep_utils.hh  weno_reconstruction.hh
parameters/: eos.yaml  grmhd.yaml  m1.yaml  mhd_diagnostics.yaml
performance_tuning/: generic.h
performance_tuning/A100/: tuning.h
performance_tuning/H100/: tuning.h
scripts/: check_hot_tov_betaeq.py  compare_grace_fil_it0.py  compare_grace_fil_kappa_sn.py
src/: CMakeLists.txt  grace.cpp
src/IO/: octree_search_class.cpp  output_diagnostics.cpp
src/IO/diagnostics/: adm_integrals.cpp  outflow_diagnostics.cpp
src/amr/: amr_functions.cpp  boundary_conditions.cpp  connectivity.cpp  forest.cpp  regrid.cpp
src/amr/regrid/: regrid_build_buffers.cpp
src/coordinates/: cartesian_coordinate_system.cpp  coordinate_systems.cpp  coordinates.cpp  spherical_coordinate_system.cpp
src/data_structures/: variable_indices.cpp  variable_utils.cpp  variables.cpp
src/evolution/: CMakeLists.txt  auxiliaries.cpp  evolve.cpp  find_stable_timestep.cpp  initial_data.cpp
src/particles/: CMakeLists.txt  particle_advance.cpp  particle_checkpoint.cpp  particle_compact.cpp  particle_hdf5_output.cpp  particle_owner_search.cpp  particle_rebalance.cpp  particles_module.cpp
src/physics/: CMakeLists.txt  eas_optical_depth.cpp  grace_weakhub_setup.cpp  grmhd.cpp  grmhd_B_from_A.cpp  m1.cpp
src/physics/eos/: CMakeLists.txt  c2p.cpp  eos_storage.cpp  read_eos_table.cpp  read_leptonic_4d_table.cpp
src/system/: checkpoint_handler.cpp  grace_finalize.cpp  grace_initialize.cpp
src/utils/: singleton_holder.cpp
test/: CMakeLists.txt  test_bc_unigrid.cpp  test_c2p.cpp  test_checkpoint_roundtrip.cpp  test_eos.cpp  test_grid_interpolator.cpp  test_m1_analytic_rates.cpp  test_m1_backreaction.cpp  test_particle_advance.cpp  test_particle_aux_fetch.cpp  test_particle_owner_search.cpp  test_pwpoly_eos.cpp  test_reflect_bc.cpp  test_reflux.cpp  test_weakhub_golden.cpp  test_weakhub_table.cpp
test/configs/: c2p_test_gamma2.yaml  c2p_test_leptonic.yaml  checkpoint_roundtrip_test.yaml  reflect_bc_fmr.yaml  reflect_bc_unigrid.yaml  weakhub_golden_test.yaml
(+27 files in other folders)
