
cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
#cmake_policy(SET CMP0144 NEW)

project(GRACE VERSION 0.5 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 20)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

include(code_modules)
include(check_compiler)
include(prohibit_in_source_build)
include(setup_flags)

# --- Options ---
option(GRACE_ENABLE_COWLING_METRIC "Use Cowling approximation (default)" ON)
option(GRACE_ENABLE_Z4C_METRIC     "Use full Z4c evolution" OFF)

if(GRACE_ENABLE_Z4C_METRIC)
    message(STATUS "GRACE will use full Z4c metric (GRACE_ENABLE_Z4C_METRIC=ON).")
    set(GRACE_ENABLE_COWLING_METRIC OFF)
elseif(GRACE_ENABLE_COWLING_METRIC)
    message(STATUS "GRACE will use full Cowling metric (GRACE_ENABLE_COWLING=ON).")
    set(GRACE_ENABLE_Z4C_METRIC OFF)
else()
    message(STATUS "No option explicitly enabled; defaulting to Cowling metric.")
    set(GRACE_ENABLE_COWLING_METRIC ON)
endif()

set(HEADER_DIR "${PROJECT_SOURCE_DIR}/include/")

option(GRACE_BUILD_DOCS "Build the docs" OFF)
option(GRACE_BUILD_DOCS_ONLY "Only build docs" OFF)
if(GRACE_BUILD_DOCS OR GRACE_BUILD_DOCS_ONLY ) 
    add_subdirectory(doc)
endif()

if( NOT GRACE_BUILD_DOCS_ONLY )

include(setup_mpi)
find_package(OpenMP REQUIRED)
find_package(p4est REQUIRED)
find_package(LibXml2 REQUIRED)
find_package(ZLIB REQUIRED)
include(setup_kokkos)
include(setup_yaml)
include(setup_spdlog)
include(setup_HDF5)

option( GRACE_ENABLE_VTK "Enable VTK support" OFF)
if ( GRACE_ENABLE_VTK )
    message(STATUS "VTK support enabled")
    include(setup_vtk)
endif() 

option( GRACE_ENABLE_LORENE "Lorene support" OFF )
if ( GRACE_ENABLE_LORENE )
    message(STATUS "LORENE support enabled")
    find_package(LORENE REQUIRED)
endif() 

option( GRACE_ENABLE_TWO_PUNCTURES "TwoPunctures support" OFF )
if ( GRACE_ENABLE_TWO_PUNCTURES )
    message(STATUS "TwoPunctures support enabled")
    find_package(TwoPunctures REQUIRED)
endif() 

option( GRACE_ENABLE_FUKA "FUKA support" OFF )

if( GRACE_ENABLE_FUKA )
    # This package contains its dependencies 
    # NB: HOME_KADATH must be set somewhere for this
    # to be found 
    find_package(Kadath REQUIRED)
endif()

option(GRACE_ENABLE_PROFILING "Build profiling hooks" OFF)
if( GRACE_ENABLE_PROFILING )
    message(STATUS "Profiling enabled.")
    if( GRACE_ENABLE_HIP )
        include(setup_rocmprofiler)
    elseif( GRACE_ENABLE_CUDA )
        message(FATAL_ERROR "CUDA GPU profiling is not supported yet.")
    endif()
else()
    message(STATUS "Profiling disabled.")
endif()

option(GRACE_ENABLE_CABANA "Include Cabana support for particle functionality" OFF)
if( GRACE_ENABLE_CABANA )
    message(STATUS "Cabana support enabled")
    find_package(Cabana REQUIRED)
endif()

# Select a per-architecture performance-tuning header.  The chosen file is
# included into grace_config.h and defines kernel LaunchBounds / tile macros.
# Each source file keeps `#ifndef GRACE_* / #define ... default / #endif`
# fallbacks, so if a tuning header does not set a macro (or the generic
# header is chosen) the source-level default applies.  LaunchBounds is a
# no-op on CPU backends, so headers are safe to include unconditionally.
#
# Selection order:
#   1. User-provided -DGRACE_PERF_TUNING=<name> — short name matching a
#      subdirectory of performance_tuning/ (e.g. Mi300A, A100).  Useful when
#      Kokkos_ARCH_* doesn't propagate out of an installed Kokkos into the
#      parent CMake (common with find_package(Kokkos)).
#   2. Auto-detect from Kokkos_ARCH_* cache variables.
#   3. Fall through to generic (no arch detected).
set(GRACE_PERF_TUNING "" CACHE STRING
    "Select performance-tuning header by name (Mi300A|Mi250X|A100|H100|generic). Leave empty to auto-detect from Kokkos_ARCH_*.")

if(GRACE_PERF_TUNING)
    set(_grace_tuning_candidate "${CMAKE_SOURCE_DIR}/performance_tuning/${GRACE_PERF_TUNING}/tuning.h")
    if(GRACE_PERF_TUNING STREQUAL "generic")
        set(_grace_tuning_candidate "${CMAKE_SOURCE_DIR}/performance_tuning/generic.h")
    endif()
    if(NOT EXISTS "${_grace_tuning_candidate}")
        message(FATAL_ERROR
            "GRACE_PERF_TUNING=${GRACE_PERF_TUNING} but no header at ${_grace_tuning_candidate}. "
            "Available: Mi300A, Mi250X, A100, H100, generic.")
    endif()
    set(GRACE_PERF_TUNING_HEADER "${_grace_tuning_candidate}")
    message(STATUS "Perf-tuning header: ${GRACE_PERF_TUNING} (user-selected)")
elseif(Kokkos_ARCH_AMD_GFX942)
    set(GRACE_PERF_TUNING_HEADER "${CMAKE_SOURCE_DIR}/performance_tuning/Mi300A/tuning.h")
    message(STATUS "Perf-tuning header: Mi300A (gfx942)")
elseif(Kokkos_ARCH_AMD_GFX90A)
    set(GRACE_PERF_TUNING_HEADER "${CMAKE_SOURCE_DIR}/performance_tuning/Mi250X/tuning.h")
    message(STATUS "Perf-tuning header: Mi250X (gfx90a)")
elseif(Kokkos_ARCH_AMPERE80)
    set(GRACE_PERF_TUNING_HEADER "${CMAKE_SOURCE_DIR}/performance_tuning/A100/tuning.h")
    message(STATUS "Perf-tuning header: A100 (sm_80)")
elseif(Kokkos_ARCH_HOPPER90)
    set(GRACE_PERF_TUNING_HEADER "${CMAKE_SOURCE_DIR}/performance_tuning/H100/tuning.h")
    message(STATUS "Perf-tuning header: H100 (sm_90)")
else()
    set(GRACE_PERF_TUNING_HEADER "${CMAKE_SOURCE_DIR}/performance_tuning/generic.h")
    message(STATUS "Perf-tuning header: generic (no arch detected — override with -DGRACE_PERF_TUNING=<name>)")
endif()

configure_file("${CMAKE_SOURCE_DIR}/include/grace/grace_config.h.in" grace_config.h)

configure_file( "${CMAKE_SOURCE_DIR}/include/grace/config/code_modules.h.in" code_modules.h )
include_directories( "${CMAKE_CURRENT_BINARY_DIR}")

add_subdirectory(src)


add_executable(grace src/grace.cpp)
target_include_directories(grace PRIVATE "${HEADER_DIR}")
target_link_libraries(grace PRIVATE 
        grace_objects
        yaml_cpp::yaml
        MPI::MPI_CXX
        OpenMP::OpenMP_CXX
        Kokkos::kokkos 
        p4est::p4est 
        p4est::sc
        spdlog::spdlog
        HDF5::HDF5
	    ZLIB::ZLIB
        # FUKA handling:
        $<$<BOOL:${GRACE_ENABLE_FUKA}>:Kadath::kadath>
        # Maybe we should remove this altogether 
        $<$<BOOL:${GRACE_ENABLE_PROFILING}>:GRACE_GPUProfiling>
        $<$<BOOL:${GRACE_ENABLE_VTK}>:VTK::VTK>
        # LORENE 
        $<$<BOOL:${GRACE_ENABLE_LORENE}>:LORENE::LORENE>
        # TwoPunctures
        $<$<BOOL:${GRACE_ENABLE_TWO_PUNCTURES}>:TwoPunctures::TwoPunctures>
        # Cabana
        $<$<BOOL:${GRACE_ENABLE_CABANA}>:Cabana::Core>
        )
if ( GRACE_ENABLE_VTK )
    vtk_module_autoinit(
        TARGETS grace
        MODULES ${VTK_LIBRARIES}
    )
endif() 

option(GRACE_ENABLE_TESTING "Build the tests" ON)
if(GRACE_ENABLE_TESTING)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/test/configs)
    configure_file("${CMAKE_SOURCE_DIR}/configs/basic_config.yaml" 
                  "${CMAKE_BINARY_DIR}/test/configs/basic_config.yaml" COPYONLY)
    configure_file("${CMAKE_SOURCE_DIR}/configs/regrid_test_cartesian.yaml" 
                  "${CMAKE_BINARY_DIR}/test/configs/regrid_test_cartesian.yaml" COPYONLY)
    configure_file("${CMAKE_SOURCE_DIR}/configs/regrid_test_spherical.yaml" 
                   "${CMAKE_BINARY_DIR}/test/configs/regrid_test_spherical.yaml" COPYONLY)
    configure_file("${CMAKE_SOURCE_DIR}/configs/regrid_test_spherical_log.yaml" 
                   "${CMAKE_BINARY_DIR}/test/configs/regrid_test_spherical_log.yaml" COPYONLY)
    configure_file("${CMAKE_SOURCE_DIR}/configs/scalar_reductions_test.yaml" 
                   "${CMAKE_BINARY_DIR}/test/configs/scalar_reductions_test.yaml" COPYONLY)
    configure_file("${CMAKE_SOURCE_DIR}/configs/pwpoly_test_config.yaml" 
                   "${CMAKE_BINARY_DIR}/test/configs/pwpoly_test_config.yaml" COPYONLY)
    configure_file("${CMAKE_SOURCE_DIR}/test/sly.h5" 
                   "${CMAKE_BINARY_DIR}/test/sly.h5" COPYONLY)
    configure_file("${CMAKE_SOURCE_DIR}/configs/c2p_test_gamma2.yaml" 
                   "${CMAKE_BINARY_DIR}/test/configs/c2p_test_gamma2.yaml" COPYONLY)
    configure_file("${CMAKE_SOURCE_DIR}/configs/c2p_test_sly4_pw.yaml" 
                   "${CMAKE_BINARY_DIR}/test/configs/c2p_test_sly4_pw.yaml" COPYONLY)
    enable_testing()
    include(setup_catch2)
    add_subdirectory(test)
endif()

option(GRACE_ENABLE_BENCHMARKS "Build the benchmarks" OFF)
if(GRACE_ENABLE_BENCHMARKS)
add_subdirectory(profiling)
endif()

endif()
